test/testData/parser/negative/enums.c

enum Empty {

};


enum NoId1 {
  = 1,
  E2 = 2,
  E3
};


enum NoId2 {
  ,
  ,
  E4,
};


